src-ken&y/objects/Facility__c.object
<CustomObject>
    <customHelpPage>HelpFacilites</customHelpPage>
    <description>Warehouse or building</description>
    <fields>
        <fullName>A_Days__c</fullName>
        <description>The number of days between cycle counts for A parts</description>
        <inlineHelpText>The number of days between cycle counts for A parts.</inlineHelpText>
        <label>A Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the postal address of this facility.</description>
        <label>Address</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Facilities</relationshipLabel>
        <relationshipName>Facilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Confirm_Pick_On_Allocation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If CHECKED, automatically picks quantities from allocation.</description>
        <inlineHelpText>If CHECKED, automatically picks quantities from allocation.</inlineHelpText>
        <label>Auto Confirm Pick On Allocation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B_Days__c</fullName>
        <description>The number of days between cycle counts for B parts</description>
        <inlineHelpText>The number of days between cycle counts for B parts.</inlineHelpText>
        <label>B Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C_Days__c</fullName>
        <description>The number of days between cycle counts for C parts</description>
        <inlineHelpText>The number of days between cycle counts for C parts.</inlineHelpText>
        <label>C Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City_Name__c</fullName>
        <description>Facility&apos;s City.</description>
        <formula>Address__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Identifier__c</fullName>
        <description>used to match to a company at data load time</description>
        <label>Company Identifier</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to company</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Facilities</relationshipLabel>
        <relationshipName>Facilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <description>Facility&apos;s Country.</description>
        <formula>Address__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Mixed_Bins_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, bin can hold more than one item</description>
        <inlineHelpText>When checked, bin can hold more than one item</inlineHelpText>
        <label>Default Mixed Bins Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Purchasing_Delivery_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default Purchasing Delivery Location</description>
        <inlineHelpText>If you want purchase orders to include a delivery location, select a location from the list of available options.</inlineHelpText>
        <label>Purchasing Delivery Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Location__c.Facility__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Facilities</relationshipLabel>
        <relationshipName>Facilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Sales_Order_Ship_From_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Location</description>
        <inlineHelpText>If you want sales orders to automatically include a ship-from location, select a location from the list of available options.</inlineHelpText>
        <label>Sales Order Ship From Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Location__c.Facility__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Facilities (Default Sales Order Ship From Location)</relationshipLabel>
        <relationshipName>Facilities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Work_Order_Complete_to_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Location</description>
        <inlineHelpText>If you want work orders to automatically include a complete-to location, select a location from the list of available options.</inlineHelpText>
        <label>Work Order Complete to Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Location__c.Facility__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Facilities (Default Work Order Complete to Location)</relationshipLabel>
        <relationshipName>Facilities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Work_Order_MRB_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Location</description>
        <inlineHelpText>If you want work orders to automatically include an MRB location, select a location from the list of available options.</inlineHelpText>
        <label>Work Order MRB Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Location__c.Facility__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Facilities (Default Work Order MRB Location)</relationshipLabel>
        <relationshipName>Facilities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Work_Order_WIP_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Location</description>
        <inlineHelpText>If you want work orders to automatically include a WIP location, select a location from the list of available options.</inlineHelpText>
        <label>Default Work Order WIP Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Location__c.Facility__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Facilities (Default Work Order WIP Location)</relationshipLabel>
        <relationshipName>Facilities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Facility&apos;s description</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Enable_Transit_Route_Optimization__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the transit routes will be enabled and transit time will be included in the delivery date calculations.</description>
        <label>Optimize Transit Route</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facility_Identifier__c</fullName>
        <label>Facility Identifier</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facility_Unique__c</fullName>
        <description>Facility and Company for uniqueness check</description>
        <label>Facility Unique</label>
        <length>160</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lead_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time (in days) it takes to ship goods from this facility.</description>
        <label>Lead Time (Days)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRP_Backward_Horizon_in_Days__c</fullName>
        <description>The number of days in the past from today that MRP will search for demand and supply</description>
        <inlineHelpText>Specifies the number of days in the past that MRP looks to for supply and demand.</inlineHelpText>
        <label>MRP Backward Horizon in Days</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRP_Demand_Time_Fence_in_Days__c</fullName>
        <description>MRP uses forecasted demand outside of this time window and Sales Orders inside this time fence</description>
        <inlineHelpText>MRP uses forecast demand outside of this time fence and sales order demand inside the time fence.</inlineHelpText>
        <label>MRP Demand Time Fence in Days</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRP_Forward_Horizon_in_Days__c</fullName>
        <description>The number of days in the future from today that MRP will search for demand and supply</description>
        <inlineHelpText>Specifies the number of days in the future that MRP looks to for supply and demand.</inlineHelpText>
        <label>MRP Forward Horizon in Days</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRP_Planning_Time_Fence_in_Days__c</fullName>
        <description>The number of days in the future from today before MRP creates any planned make order</description>
        <inlineHelpText>MRP will not change existing planned orders within the specified period.</inlineHelpText>
        <label>MRP Planning Time Fence in Days</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturing Calendar</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>Calendar__c.Type__c</field>
                <operation>equals</operation>
                <value>Manufacturing</value>
            </filterItems>
            <filterItems>
                <field>Calendar__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Calendar__c</referenceTo>
        <relationshipLabel>Facilities</relationshipLabel>
        <relationshipName>Facilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planning_Calendar2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planning Calendar</label>
        <referenceTo>Calendar__c</referenceTo>
        <relationshipLabel>Facilities (Planning Calendar)</relationshipLabel>
        <relationshipName>Facilities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planning_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The business hours calendar used to determine when the facility is open to plan orders.</description>
        <label>Planning Calendar</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Facilities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>unique key used to data load this table</description>
        <externalId>true</externalId>
        <label>Primary Key</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RMA_Receipt_Routing__c</fullName>
        <label>RMA Receipt Routing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inspect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Receiving_Calendar2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receiving Calendar</label>
        <referenceTo>Calendar__c</referenceTo>
        <relationshipLabel>Facilities (Receiving Calendar)</relationshipLabel>
        <relationshipName>Facilities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Receiving_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receiving Calendar</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Facilities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Aggregation_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, all the sales orders needs to be aggregated before they can be allocated.</description>
        <label>Sales Order Aggregation Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The business hours calendar used to determine when the facility is open to ship orders.</description>
        <label>Shipping Calendar</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Facilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Province_Name__c</fullName>
        <description>Facility&apos;s State.</description>
        <formula>Address__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State / Province Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <description>Facility&apos;s Street.</description>
        <formula>Address__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Only_Level_Zero_QOH_as_Supply_in_MRP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Level Zero QOH as Supply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Order_Forecast_as_Demand_in_MRP__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Use Order Forecast as Demand in MRP</description>
        <inlineHelpText>If not selected, MRP ignores order forecasts as demand.</inlineHelpText>
        <label>Order Forecast as Demand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Purchase_Orders_as_Supply_in_MRP__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Use Purchase Orders as Supply in MRP</description>
        <inlineHelpText>If not selected, MRP ignores purchase orders as supply.</inlineHelpText>
        <label>Purchase Orders as Supply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Quantity_on_Hand_as_Supply_in_MRP__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Use Quantity on Hand as Supply in MRP</description>
        <inlineHelpText>If not selected, MRP ignores  Safety Stock and Negative Quantity on Hand.</inlineHelpText>
        <label>Quantity on Hand as Supply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Sales_Orders_as_Demand_in_MRP__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Use Sales Orders as Demand in MRP</description>
        <inlineHelpText>If not selected, MRP ignores sales orders as demand.</inlineHelpText>
        <label>Sales Orders as Demand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Transfer_Orders_as_Demand_in_MRP__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Use Transfer Orders as Demand in MRP</description>
        <inlineHelpText>Use Transfer Orders as Demand in MRP</inlineHelpText>
        <label>Transfer Orders as Demand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Transfer_Orders_as_Supply_in_MRP__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Use Transfer Orders as Supply in MRP</description>
        <inlineHelpText>Use Transfer Orders as Supply in MRP</inlineHelpText>
        <label>Transfer Orders as Supply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Work_Orders_as_Demand_in_MRP__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Use Work Orders as Demand in MRP</description>
        <inlineHelpText>If not selected, MRP ignores work orders as demand.</inlineHelpText>
        <label>Work Orders as Demand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Work_Orders_as_Supply_in_MRP__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Use Work Orders as Supply in MRP</description>
        <inlineHelpText>If not selected, MRP ignores work orders as supply.</inlineHelpText>
        <label>Work Orders as Supply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <description>Facility&apos;s Zip / Postal Code.</description>
        <formula>Address__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip / Postal Code</label>
        <type>Text</type>
    </fields>
    <label>Facility</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Description__c</columns>
        <columns>Street_Address__c</columns>
        <columns>City_Name__c</columns>
        <columns>State_Province_Name__c</columns>
        <columns>Zip_Postal_Code__c</columns>
        <columns>Country_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Facility</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ABC_Days</fullName>
        <active>true</active>
        <errorConditionFormula>OR(A_Days__c &lt; 0, B_Days__c &lt;0, C_Days__c &lt;0)</errorConditionFormula>
        <errorMessage>A Days, B Days or C Days cannot be less than zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Company_must_not_change</fullName>
        <active>true</active>
        <description>Company cannot change once the record has been created</description>
        <errorConditionFormula>ISCHANGED(Company__c)</errorConditionFormula>
        <errorMessage>Once created for a Company,  Facility cannot change Company.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QOH_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( Use_Only_Level_Zero_QOH_as_Supply_in_MRP__c  == true,  Use_Quantity_on_Hand_as_Supply_in_MRP__c == true)</errorConditionFormula>
        <errorDisplayField>Use_Only_Level_Zero_QOH_as_Supply_in_MRP__c</errorDisplayField>
        <errorMessage>You cannot check both Use Quantity on Hand as Supply in MRP or Use Only Level Zero QOH as Supply in MRP</errorMessage>
    </validationRules>
</CustomObject>